--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -34,6 +34,12 @@ body {
   width: 140px;
   height: 55px;
 }
+.bluebtnsm {
+  background-color: #4e34f0;
+  color: white;
+  width: 120px;
+  height: 40px;
+}
 .bgdialog {
   width: 350px;
   height: 300px;
@@ -64,6 +70,7 @@ body {
   background: linear-gradient(to right, #ff00f5, #00f0ff);
   padding: 3px;
   border-radius: 25px;
+  overflow: hidden;
 }
 .bginside {
   background: #1a0022;
@@ -170,6 +177,9 @@ body {
 }
 .font18 {
   font-size: 18px;
+}
+.font16 {
+  font-size: 16px;
 }
 .font14 {
   font-size: 14px;
