--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -28,10 +28,22 @@ body {
   width: 140px;
   height: 55px;
 }
+.outlinebluelong {
+  background-color: #4e34f0;
+  color: white;
+  width: 165px;
+  height: 55px;
+}
 .bluebtnmd {
   background-color: #4e34f0;
   color: white;
   width: 140px;
+  height: 55px;
+}
+.bluebtnmdlong {
+  background-color: #4e34f0;
+  color: white;
+  width: 165px;
   height: 55px;
 }
 .bluebtnsm {
